--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.21",
+    "@types/mocha": "^10.0.7",
     "@types/nodemon": "^1.19.6",
+    "@types/sinon": "^17.0.3",
     "joi-to-typescript": "^4.13.0",
     "nodemon": "^3.1.4"
   }
